# Triangles

./: .gitignore  CMakeLists.txt  README.md  README2.md
Triangles-level_2/include/: line.hpp
Triangles-level_2/learnOpenGL/: camera1.cpp  camera2.cpp  data.txt  testing_better_pause_menu.cpp  testing_camera_with_cubes.cpp  testing_camera_with_triangles.cpp  testing_pause_menu.cpp  testing_pause_menu_modifications.cpp  trivial_lighting.cpp
end2end/: run_e2e.sh
end2end/tests/: test1.txt
geogebra_tests/: Intersection3D_1.ggb  Intersection3D_12.ggb  Intersection3D_13.ggb  Intersection3D_17.ggb  Intersection3D_18.ggb  Intersection3D_2.ggb  Intersection3D_8.ggb  Intersection3D_9.ggb  LineWithLine_1.ggb  LineWithLine_4.ggb  LineWithLine_5.ggb  LineWithPoint_1.ggb  LineWithPoint_2.ggb  PointWithPoint_1.ggb  PointWithPoint_2.ggb  TrgWithLine2D_2.ggb  TrgWithLine2D_4.ggb  TrgWithLine2D_7.ggb  TrgWithLine3D_1.ggb  TrgWithLine3D_3.ggb  TrgWithLine3D_4.ggb  TrgWithLine3D_6.ggb  TrgWithPoint_1.ggb  TrgWithPoint_2.ggb  TrgWithPoint_3.ggb  TrgWithPoint_4.ggb  TrgWithTrg2D_1.ggb  TrgWithTrg2D_2.ggb  TrgWithTrg2D_3.ggb  TrgWithTrg2D_4.ggb  TrgWithTrg2D_7.ggb  TrgWithTrg3D_10.ggb  TrgWithTrg3D_14.ggb  TrgWithTrg3D_15.ggb  TrgWithTrg3D_16.ggb  TrgWithTrg3D_19.ggb  TrgWithTrg3D_3.ggb  TrgWithTrg3D_4.ggb  TrgWithTrg3D_5.ggb  TrgWithTrg3D_7.ggb
include/: config.hpp  interval.hpp  line.hpp  octotree.hpp  plane.hpp  point.hpp  triangles.hpp  vector.hpp  visualizer.hpp
include/visualizer/: camera.hpp  flag.hpp  grid.hpp  settings.hpp  shader.hpp  ui.hpp  visualizer.hpp
learnOpenGL/: hello_triangle.cpp  hello_window.cpp  some_math.cpp  testing_camera_single_static_triangle.cpp  testing_camera_with_triangles.cpp  trivial_lighting.cpp
lvl-1/: .gitignore  README.md
lvl-1/geogebra_tests/: LineWithLine_2.ggb  LineWithLine_3.ggb  LineWithLine_6.ggb  LineWithPoint_3.ggb  TrgWithLine2D_1.ggb  TrgWithLine2D_3.ggb  TrgWithLine2D_5.ggb  TrgWithLine2D_6.ggb  TrgWithLine2D_8.ggb  TrgWithLine2D_9.ggb  TrgWithLine3D_2.ggb  TrgWithLine3D_5.ggb  TrgWithTrg2D_5.ggb  TrgWithTrg2D_6.ggb  TrgWithTrg2D_8.ggb  TrgWithTrg3D_11.ggb  TrgWithTrg3D_6.ggb
lvl-1/include/: vector.hpp
lvl-1/src/: google_test.cpp  main.cpp
src/: config.cpp  google_test.cpp  main.cpp  visualizer.cpp
src/visualizer/: camera.cpp  flag.cpp  grid.cpp  shader.cpp  ui.cpp  visualizer.cpp
